# disrev

./: .gitignore  README.md  pyproject.toml
src/: config.py  controller.py  discord_bridge.py  main.py  revolt_bridge.py
